--- a/style/main.css
+++ b/style/main.css
@@ -8,9 +8,8 @@
     box-sizing: border-box;
 }
 
-html {
+html, body {
     background-color: black;
-    width: 100%;
     height: 100%;
 }
 
@@ -21,7 +20,6 @@ body {
     background-position: center;
     background-repeat: repeat-y;
     width: 640px;
-    height: 100%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -60,14 +58,26 @@ h1, h2, h3, h4, h5, h6, b, strong {
 
 header {
     text-align: center;
-    /* margin-top: 170px; */
+    margin-top: 170px;
     position: absolute;
     z-index: 0;
 }
 
-header h1 {
-    text-align: right;
+h1 {
+    display: flex;
     font-size: 48px;
+    justify-content: space-between;
+    width: 560px;
+}
+
+h1 span:first-child {
+    position: absolute;
+    left: 100px;
+}
+
+h1 span:last-child {
+    position: absolute;
+    right: 0px;
 }
 
 .imgAnna {
